# procesamiento-imagenes-opencv-cpp

./: CMakeLists.txt  README.md
ejercicio_clase_feb16/: CMakeLists.txt  background_subtraction.cpp  frame_difference.cpp  running_average.cpp
src/: ejercicio1.cpp  ejercicio2.cpp  ejercicio3.cpp  ejercicio4.cpp  ejercicio6.cpp  ejercicio7.cpp
